[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/GameCaroline/coloringGame-0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Games/GameCaroline/GameCaroline.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/GameCaroline/bubble.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/GameCaroline/coloringGameTwo-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/GameCaroline/coloringGameTwo-0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/GameCaroline/coloringGameTwo-3.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=2]
radius = 113.373
height = 121.365

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 0.4
scale_random = 1.0
color = Color( 1, 1, 1, 0.929412 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 597.532, 722.437 )

[node name="Node2D" type="Node2D"]
position = Vector2( -3.77551, 15.102 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -31.0
margin_top = -26.0
margin_right = 2269.0
margin_bottom = 1711.0
mouse_filter = 2
color = Color( 0.882353, 0.603922, 0.266667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="canvas" type="Sprite" parent="ColorRect"]
position = Vector2( 1391.5, 816.481 )
scale = Vector2( 0.794161, 0.742783 )
texture = ExtResource( 5 )

[node name="canvasBottom" type="Sprite" parent="ColorRect/canvas"]
position = Vector2( -14.1121, 1059.9 )
scale = Vector2( 0.905709, 0.905709 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( -6.61374, 1396.7, 896.999, 457.747 )

[node name="canvasBottom2" type="Sprite" parent="ColorRect/canvas"]
position = Vector2( -14.1121, -946.88 )
scale = Vector2( 0.905709, 0.905709 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 899.854, 1405.6, 346.059, 215.858 )

[node name="Palette" type="Sprite" parent="ColorRect"]
position = Vector2( 311.303, 1093.45 )
rotation = -1.57079
scale = Vector2( 0.838534, 0.838534 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( -12.6992, 1482.52, 1218.26, 504.458 )
__meta__ = {
"_edit_lock_": true
}

[node name="BrushPalette" type="Area2D" parent="ColorRect/Palette"]
position = Vector2( -264.745, -120.336 )
rotation = 4.54747e-13

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ColorRect/Palette/BrushPalette"]
polygon = PoolVector2Array( 30.4598, -40.8851, 135.143, -62.2727, 216.188, 1.88742, 120.51, 57.0436, 78.8622, 61.5464, 37.2139, 33.406, -41.5797, 42.4115, -137.258, 49.1659, -225.057, -5.98918, -114.746, -48.7636, -28.0729, -51.0154 )

[node name="highlightBrush" type="Sprite" parent="ColorRect/Palette/BrushPalette"]
position = Vector2( -4.3031, -3.71001 )
rotation = 1.57079
scale = Vector2( 0.850506, 0.850506 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 1735, 1407, 157, 547 )

[node name="BrushPalette" type="Sprite" parent="ColorRect/Palette/BrushPalette"]
position = Vector2( 199.362, 38.8067 )
rotation = 1.5722
scale = Vector2( 0.668252, 0.676587 )
z_index = 105
texture = ExtResource( 1 )
offset = Vector2( -59.3217, 291.948 )
region_enabled = true
region_rect = Rect2( 1528.49, 511.007, 105.953, 541.328 )

[node name="BrushTip" type="Sprite" parent="ColorRect/Palette/BrushPalette/BrushPalette"]
position = Vector2( 2.46106, 107.599 )
texture = ExtResource( 1 )
offset = Vector2( -63.8589, -16.6239 )
region_enabled = true
region_rect = Rect2( 1634.56, 613.914, 103.504, 149.889 )

[node name="SpongePalette" type="Area2D" parent="ColorRect/Palette"]
position = Vector2( -361.809, 75.2513 )
rotation = -1.55797
scale = Vector2( 0.752862, 0.785649 )
z_index = 101

[node name="highlightSponge" type="Sprite" parent="ColorRect/Palette/SpongePalette"]
visible = false
position = Vector2( 3.19501, 100.338 )
rotation = -1.58029
scale = Vector2( 1.00965, 1.05361 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 885.406, 1621.25, 326.707, 233.596 )

[node name="Sponge" type="Sprite" parent="ColorRect/Palette/SpongePalette"]
position = Vector2( 67.5554, 201.663 )
rotation = -0.0193494
scale = Vector2( 0.791458, 0.791458 )
texture = ExtResource( 1 )
offset = Vector2( -84.0653, -131.276 )
region_enabled = true
region_rect = Rect2( 1526.08, 210.914, 212.717, 297.661 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Palette/SpongePalette"]
position = Vector2( -3.04327, 101.503 )
rotation = -0.0113279
shape = SubResource( 2 )

[node name="ColorSpawnPoints" type="Node2D" parent="ColorRect/Palette"]
position = Vector2( 887.388, -468.565 )
rotation = 1.57079

[node name="Position2D" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 383.901, 462.378 )

[node name="Position2D2" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 539.8, 463.362 )

[node name="Position2D3" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 374.791, 614.628 )

[node name="Position2D4" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 535.699, 620.653 )

[node name="Position2D5" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 368.975, 782.263 )

[node name="Position2D6" type="Position2D" parent="ColorRect/Palette/ColorSpawnPoints"]
position = Vector2( 535.71, 779.596 )

[node name="Sponge" type="Area2D" parent="ColorRect"]
visible = false
position = Vector2( 374.402, 1396.84 )
rotation = -3.12876
scale = Vector2( 0.6313, 0.658793 )
z_index = 101

[node name="highlightSponge" type="Sprite" parent="ColorRect/Sponge"]
position = Vector2( 3.19501, 100.338 )
rotation = -1.58029
scale = Vector2( 1.00965, 1.05361 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 885.406, 1621.25, 326.707, 233.596 )

[node name="Particles2D" type="Particles2D" parent="ColorRect/Sponge"]
self_modulate = Color( 1, 1, 1, 0.941176 )
rotation = 3.11115
emitting = false
lifetime = 6.0
speed_scale = 2.99
explosiveness = 0.05
randomness = 0.21
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Sponge" type="Sprite" parent="ColorRect/Sponge"]
position = Vector2( 67.5554, 201.663 )
rotation = -0.0193494
scale = Vector2( 0.791458, 0.791458 )
texture = ExtResource( 1 )
offset = Vector2( -84.0653, -131.276 )
region_enabled = true
region_rect = Rect2( 1526.08, 210.914, 212.717, 297.661 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Sponge"]
position = Vector2( -3.04327, 101.503 )
rotation = -0.0113279
shape = SubResource( 2 )

[node name="Brush" type="Sprite" parent="ColorRect"]
visible = false
position = Vector2( 244.367, 1145.2 )
rotation = 0.00140727
scale = Vector2( 0.584384, 0.584384 )
z_index = 105
texture = ExtResource( 1 )
offset = Vector2( -59.3217, 291.948 )
region_enabled = true
region_rect = Rect2( 1528.49, 511.007, 105.953, 541.328 )

[node name="BrushTip" type="Sprite" parent="ColorRect/Brush"]
position = Vector2( 2.46106, 107.599 )
texture = ExtResource( 1 )
offset = Vector2( -63.8589, -16.6239 )
region_enabled = true
region_rect = Rect2( 1634.56, 613.914, 103.504, 149.889 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1515.91, 850.74 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 60.1314, -156.431 )
rotation = -0.00381334
shape = SubResource( 5 )
one_way_collision_margin = 0.0

[node name="Stack" type="Sprite" parent="."]
position = Vector2( 268.144, 315.066 )
scale = Vector2( 0.759875, 0.748886 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 1239.1, 1409.14, 492.116, 477.874 )

[connection signal="input_event" from="ColorRect/Palette/BrushPalette" to="." method="_on_BrushPalette_input_event"]
[connection signal="input_event" from="ColorRect/Palette/SpongePalette" to="." method="_on_SpongePalette_input_event"]
[connection signal="input_event" from="ColorRect/Sponge" to="." method="_on_Sponge_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
